--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
