--- a/friend.properties
+++ b/friend.properties
@@ -1,1 +1,2 @@
 
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
